--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -3262,7 +3262,7 @@
                                                 const currentNow = new Date();
                                                 updateMap(currentNow);
                                                 updateMoonChart(currentNow);
-                                                updateChart(hourIndex, false);
+                                                updateChart(minuteIndex / 60, false);
                                             };
                                                 
     window.addEventListener('unload', () => {
