--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -2098,17 +2098,24 @@
           chart.update('none');
         }
 
-        const rateStr = currentRateQth != null ? (currentRateQth / 1000).toFixed(4) : null;
+        // Safety guard: treat tiny elevations (>= -0.1°) as valid (Astronomy.js sometimes returns -0.02° due to refraction model)
+        const isElevValid   = currentElevQth !== null && currentElevQth >= -0.1;
+        const isAzValid     = currentAzQth   !== null;
+        const isRateValid   = currentRateQth !== null && currentRateQth >= 0;
+        const isDopplerValid = currentDopplerQth !== null;
+
+        const rateStr = isRateValid ? (currentRateQth / 1000).toFixed(4) : null;
+
         document.getElementById('chartLabel').innerHTML =
           `<span class="metric-locator">${qthInput}</span>` +
           `<span class="metric-separator"></span>` +
-          `<span class="metric-label metric-elevation">El:</span> ${currentElevQth != null ? currentElevQth.toFixed(1) + '°' : 'N/A'}` +
+          `<span class="metric-label metric-elevation">El:</span> ${isElevValid ? currentElevQth.toFixed(1) + '°' : 'N/A'}` +
           `<span class="metric-separator">|</span>` +
-          `<span class="metric-label metric-azimuth">Az:</span> ${currentAzQth != null ? currentAzQth.toFixed(1) + '°' : 'N/A'}` +
+          `<span class="metric-label metric-azimuth">Az:</span> ${isAzValid ? currentAzQth.toFixed(1) + '°' : 'N/A'}` +
           `<span class="metric-separator">|</span>` +
           `<span class="metric-label metric-libration">Libr:</span> ${rateStr != null ? rateStr + '°/min' : 'N/A'}` +
-          `<span class="metric-separator">|</span>` +
-          `<span class="metric-label metric-doppler">Spread:</span> ${currentDopplerQth != null ? currentDopplerQth.toFixed(0) + ' Hz' : 'N/A'}`;
+          `<span/font class="metric-separator">|</span>` +
+          `<span class="metric-label metric-doppler">Spread:</span> ${isDopplerValid ? currentDopplerQth.toFixed(0) + ' Hz' : 'N/A'}`;
       } else {
         document.getElementById("chartWrapper").style.display = "none";
         if (chart) {
